fix: channel more readable on tiny screens

--- a/Frontend/src/app/channel/channel.component.scss
+++ b/Frontend/src/app/channel/channel.component.scss
@@ -18,6 +18,6 @@
   }
 
   @media screen and (max-height: 500px) {
-    max-height: 25vh;
+    max-height: 20vh;
   }
 }
